Issue #2. Bring back width to 70 rem for readability

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -1,5 +1,5 @@
 .md-grid {
-  max-width: 80rem;
+  max-width: 70rem;
 }
 .wy-nav-content {
   max-width: 1200px;
